syntax = "proto3";

option go_package = "akave.ai/akave/private/pb";

import "google/protobuf/timestamp.proto";

package nodeapi;

service NodeAPI {
  // Bucket APIs.
  rpc BucketCreate (BucketCreateRequest) returns (BucketCreateResponse) {}
  rpc BucketView (BucketViewRequest) returns (BucketViewResponse) {}
  rpc BucketList (BucketListRequest) returns (BucketListResponse) {}
  rpc BucketDelete (BucketDeleteRequest) returns (BucketDeleteResponse) {}
  // File APIs.
  rpc FileUploadCreate (FileUploadCreateRequest) returns (FileUploadCreateResponse) {}
  rpc FileUploadBlock (stream FileBlockData) returns (FileUploadBlockResponse) {}
  rpc FileView (FileViewRequest) returns (FileViewResponse) {}
  rpc FileDownloadCreate (FileDownloadCreateRequest) returns (FileDownloadCreateResponse) {}
  rpc FileDownloadCreateV2 (FileDownloadCreateRequestV2) returns (FileDownloadCreateResponseV2) {}
  rpc FileDownload (FileDownloadRequest) returns (FileDownloadResponse) {}
  rpc FileDownloadRangeCreate (FileDownloadRangeCreateRequest) returns (FileDownloadCreateResponse) {}
  rpc FileDownloadBlock (FileDownloadBlockRequest) returns (stream FileBlockData) {}
  rpc FileList (FileListRequest) returns (FileListResponse) {}
  rpc FileKeys (FileKeysRequest) returns (FileKeysResponse) {}
  rpc FileUpdateCreate (FileUpdateCreateRequest) returns (FileUpdateCreateResponse) {}
  rpc FileDelete (FileDeleteRequest) returns (FileDeleteResponse) {}
}

message BucketCreateRequest {
  string name = 1;
}

message BucketCreateResponse {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
}

message BucketViewRequest {
  string bucket_name = 1;
}
message BucketViewResponse {
  string id = 1;
  string name = 2;
  google.protobuf.Timestamp created_at = 3;
}

message BucketListRequest {}
message BucketListResponse {
  repeated Bucket buckets = 1;

  message Bucket {
    string id = 1;
    string name = 2;
    google.protobuf.Timestamp created_at = 3;
  }
}

message BucketDeleteRequest {
  string bucket_name = 1;
}
message BucketDeleteResponse {}

message FileUploadCreateRequest {
  string bucket_name = 1;
  string file_name = 2;
  string root_cid = 3;
  repeated Block blocks = 4;
  int64 size = 5;

  message Block {
    string cid = 1;
    int64 size = 2;
  }
}

message FileUploadCreateResponse {
  repeated BlockUpload blocks = 1;

  message BlockUpload {
    string cid = 1;
    int64 size = 2;
    string node_address = 3;
    string node_id = 4;
    string permit = 5;
  }
}

message FileBlockData {
  bytes data = 1;
  string cid = 2;
}

message FileUploadBlockResponse {}

message FileViewRequest {
  string bucket_name = 1;
  string file_name = 2;
}
message FileViewResponse {
  string bucket_id = 1;
  string file_name = 2;
  string root_cid = 3;
  int64 size = 4;
  google.protobuf.Timestamp created_at = 5;
}

message FileDownloadRequest {}
message FileDownloadResponse {}

message FileDownloadCreateRequest {
  string bucket_name = 1;
  string file_name = 2;
}

message FileDownloadRangeCreateRequest {
  string bucket_name = 1;
  string file_name = 2;
  int64 start = 3;
  int64 end = 4;
}

message FileDownloadCreateResponse {
  repeated BlockDownload blocks = 1;

  message BlockDownload {
    string cid = 1;
    int64 size = 2;
    string node_address = 3;
    string node_id = 4;
    string permit = 5;
  }
}

message FileDownloadCreateRequestV2 {
  string bucket_name = 1;
  string file_name = 2;
}

message FileDownloadCreateResponseV2 {
  repeated BlockDownloadV2 blocks = 1;

  message BlockDownloadV2 {
    string cid = 1;
    int64 size = 2;

    oneof source {
      Akavenode node_block = 3;
      FilecoinSP service_provider_block = 4;
    }
  }

  message Akavenode {
    string node_address = 1;
    string node_id = 2;
    string permit = 3;
  }

  message FilecoinSP {
    string sp_address = 1;
    string sp_id = 2;
  }
}

message FileDownloadBlockRequest {
  string block_cid = 1;
}

message FileListRequest {
  string bucket_name = 1;
}

message FileListResponse {
  repeated File list = 1;

  message File {
    string root_cid = 1;
    string name = 2;
    int64 size = 3;
    google.protobuf.Timestamp created_at = 4;
  }
}

message FileKeysRequest {}
message FileKeysResponse {}
message FileUpdateCreateRequest {}
message FileUpdateCreateResponse {}

message FileDeleteRequest {
  string bucket_name = 1;
  string file_name = 2;
}

message FileDeleteResponse {}

// Stream APIs.
service StreamAPI {
  rpc FileUploadCreate (StreamFileUploadCreateRequest) returns (StreamFileUploadCreateResponse) {}
  rpc FileUploadChunkCreate (StreamFileUploadChunkCreateRequest) returns (StreamFileUploadChunkCreateResponse) {}
  rpc FileUploadBlock (stream StreamFileBlockData) returns (StreamFileUploadBlockResponse) {}
  rpc FileUploadCommit (StreamFileUploadCommitRequest) returns (StreamFileUploadCommitResponse) {}
  rpc FileDownloadCreate (StreamFileDownloadCreateRequest) returns (StreamFileDownloadCreateResponse) {}
  rpc FileDownloadRangeCreate (StreamFileDownloadRangeCreateRequest) returns (StreamFileDownloadCreateResponse) {}
  rpc FileDownloadChunkCreate (StreamFileDownloadChunkCreateRequest) returns (StreamFileDownloadChunkCreateResponse) {}
  rpc FileDownloadBlock (StreamFileDownloadBlockRequest) returns (stream StreamFileBlockData) {}
  rpc FileList (StreamFileListRequest) returns (StreamFileListResponse) {}
  rpc FileView (StreamFileViewRequest) returns (StreamFileViewResponse) {}
  rpc FileDelete (StreamFileDeleteRequest) returns (StreamFileDeleteResponse) {}
}

message StreamFileUploadCreateRequest {
  string bucket_name = 1;
  string file_name = 2;
}
message StreamFileUploadCreateResponse {
  string bucket_id = 1;
  string file_name = 2;
  string stream_id = 3;
  google.protobuf.Timestamp created_at = 4;
}

message Chunk {
  string stream_id = 1; 
  string cid = 2; 
  int64 index = 3; 
  repeated Block blocks = 4;

  message Block {
    string cid = 1;
    int64 size = 2;
  }
}

message StreamFileUploadChunkCreateRequest{
  Chunk chunk = 1;
}
message StreamFileUploadChunkCreateResponse {
  repeated BlockUpload blocks = 1;

  message BlockUpload {
    string cid = 1;
    string node_address = 2;
    string node_id = 3;
    string permit = 4;
  }
}

// TODO: do not reuse this message for upload and download, create seprate messages
message StreamFileBlockData {
  bytes data = 1;
  string cid = 2; // only present in first msg of request stream
  int64 index = 3; // only present in first msg of request stream
  Chunk chunk = 4; // only present in first msg of request stream
}
message StreamFileUploadBlockResponse {}

message StreamFileUploadCommitRequest {
  string stream_id = 1;
  string root_cid = 2;
}
message StreamFileUploadCommitResponse {
  string stream_id = 1;
  string file_name = 2;
  string bucket_id = 3;
  int64 file_size = 4;
  google.protobuf.Timestamp committed_at = 5;
}

message StreamFileDownloadCreateRequest {
  string bucket_name = 1;
  string file_name = 2;
}
message StreamFileDownloadCreateResponse {
  string bucket_id = 1;
  string stream_id = 2;
  repeated Chunk chunks = 3;

  message Chunk {
    string cid = 1;
    int64 size = 2;
  }
}

message StreamFileDownloadRangeCreateRequest {
  string bucket_name = 1;
  string file_name = 2;
  int64 start_index = 3;
  int64 end_index = 4;
}

message StreamFileDownloadChunkCreateRequest {
  string stream_id = 1;
  string chunk_cid = 2;
}
message StreamFileDownloadChunkCreateResponse {
  repeated BlockDownload blocks = 1;

  message BlockDownload {
    string cid = 1;
    int64 size = 2;
    string node_address = 3;
    string node_id = 4;
    string permit = 5;
  }
}

message StreamFileDownloadBlockRequest {
  string stream_id = 1;
  string chunk_cid = 2;
  int64 chunk_index = 3; 
  string block_cid = 4;
  int64 block_index = 5; 
}

message StreamFileListRequest {
  string bucket_name = 1;
}

message StreamFileListResponse {
  repeated File files = 1;

  message File {
    string stream_id = 1;
    string root_cid = 2;
    string name = 3;
    int64 size = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp commited_at = 6;
  }
}

message StreamFileViewRequest {
  string bucket_name = 1;
  string file_name = 2;
}

message StreamFileViewResponse {
  string bucket_id = 1;
  string file_name = 2;
  string stream_id = 3;
  string root_cid = 4;
  int64 size = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp committed_at = 7;
}

message StreamFileDeleteRequest {
  string bucket_name = 1;
  string file_name = 2;
}

message StreamFileDeleteResponse {}
