syntax = "proto3";

option go_package = "akave.ai/akave/private/pb";

import "google/protobuf/timestamp.proto";

package p2p;

message ExistsBlockRequest {
  string block_cid = 1;
}

message ExistsBlockResponse {
  string node_public_address = 1;
  string permit = 2;
  bool exists = 3;
}

message PeerInfoRequest {
}

message PeerInfoResponse {
  string node_public_address = 1;
}

message NewBucket {
  string id = 1;
  string name = 2;
  google.protobuf.Timestamp created_at = 3;
}

message DeleteBucket {
  string id = 1;
}

message NewFile {
  string bucket_id = 1;
  string name = 2;
  string root_cid = 3;
  int64 size = 4;
  google.protobuf.Timestamp created_at = 5;
  repeated Block blocks = 6;

  message Block {
    string cid = 1;
    int64 size = 2;
  }
}

message DeleteFile {
  string bucket_id = 1;
  string file_name = 2;
}

message DeleteFileStream {
  string bucket_id = 1;
  string file_name = 2;
}

message NewPeerBlock {
  bytes peer_id = 1;
  string block_cid = 2;
  bool is_replica = 3;
}

message NewFileStream {
  string bucket_id = 1;
  string name = 2;
  string stream_id = 3;
  google.protobuf.Timestamp created_at = 4;
}

message NewFileChunk {
  string stream_id = 1;
  string chunk_cid = 2;
  int64 chunk_index = 3;
  int64 chunk_size = 4;
  repeated Block blocks = 5;

  message Block {
    string cid = 1;
    int64 size = 2;
  }
}

message FileStreamCommit {
  string stream_id = 1;
  string root_cid = 2;
  google.protobuf.Timestamp committed_at = 3;
}
